# DevSecOpsHub

./: .replit  activity.py  admin.py  analytics.py  app.py  auth.py  client.py  enhanced_reports.py  flow.py  local_hosting_guide.md  main.py  models.py  notifications.py  pyproject.toml  rbac.py  replit.md  reports.py  secure.py  ui_enhancements.py
instance/: nexus.db
static/css/: enhanced.css  style.css
static/js/: findings.js  kanban.js  main.js  notifications.js
templates/: base.html  error.html
templates/activity/: logs.html
templates/admin/: dashboard.html  projects.html  users.html
templates/analytics/: dashboard.html
templates/auth/: login.html  register.html
templates/client/: dashboard.html  project.html
templates/components/: modals.html  navbar.html
templates/flow/: board.html  dashboard.html
templates/reports/: preview.html
templates/secure/: dashboard.html  project.html
