[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-jwt-extended>=4.7.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.2",
    "flask-login>=0.6.3",
    "werkzeug>=3.1.3",
    "sqlalchemy>=2.0.41",
    "sendgrid>=6.12.4",
    "numpy>=2.3.1",
    "bcrypt>=4.3.0",
    "flask-socketio>=5.5.1",
    "redis>=6.2.0",
    "celery>=5.5.3",
    "flask-mail>=0.10.0",
    "plotly>=6.1.2",
    "pandas>=2.3.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
]
